--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@
   text-align: center;
   bottom: 635px;
 }
+
+h1 {
+  font-family: Verdana, "Geneva", Tahoma, sans-serif;
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: azure;
+}
