--- a/style.css
+++ b/style.css
@@ -38,3 +38,11 @@ p {
 .container2 {
   margin-top: -250px;
 }
+
+h2 {
+  font-family: Verdana, sans-serif;
+  font-size: 2.2rem;
+  text-align: center;
+}
+
+
