--- a/style.css
+++ b/style.css
@@ -51,3 +51,10 @@ h4 {
   font-family: "Gill Sans", "Trebuchet MS", sans-serif;
 }
 
+h3{
+    text-align: center;
+    font-family: Verdana, sans-serif;
+    font-size: 2.2rem;
+}
+
+h
