--- a/style.css
+++ b/style.css
@@ -57,4 +57,9 @@ h3{
     font-size: 2.2rem;
 }
 
-h
+h5{
+    text-align: center;
+    font-family: "Gill Sans", "Trebuchet MS", sans-serif;
+    font-size: 1rem;
+}
+
