--- a/style.css
+++ b/style.css
@@ -54,12 +54,20 @@ h4 {
 h3{
     text-align: center;
     font-family: Verdana, sans-serif;
-    font-size: 2.2rem;
+    font-size: 2.2rem;    
 }
 
 h5{
     text-align: center;
     font-family: "Gill Sans", "Trebuchet MS", sans-serif;
-    font-size: 1rem;
+    font-size: 1rem;  
 }
 
+.services-text{
+    margin-top: -335px;
+    color: beige;
+}
+
+.WWD-header{
+    margin-top: 228px;
+}
