--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body{
+  position: relative;
+
+}
+
 .logo {
   position: relative;
   text-align: center;
@@ -65,6 +70,7 @@ h5{
 
 h6{
   font-family: Impact, sans-serif;
+  font-weight: 500;
   font-size: 1.1rem;
 }
 
@@ -96,10 +102,14 @@ h6{
 }
 
 .dsn-title{
-  margin-left: 15px;
+  margin-left: 10px;
 
 }
 
 .dv-title{
   margin-left: 60px;
+}
+
+.portfolio-h3{
+  margin-top: 70px;
 }
