--- a/style.css
+++ b/style.css
@@ -155,3 +155,10 @@ h6{
 .img-wrap:hover > img.blur{
   filter: blur(5px);
 }
+
+.img-wrap > .content.fade{
+  opacity: 0;
+}
+.img-wrap:hover > .content.fade{
+  opacity:1;
+}
