--- a/style.css
+++ b/style.css
@@ -188,8 +188,39 @@ h6{
 .contact-bg{
   margin-top: 50px;
 }
+form{
+  text-align: center;
+  margin-top: 50px;
+}
+
+input[type=text],input[type=email],#comment{
+  background: transparent;
+  color: white;
+  font-size: 20px;
+  font-family: 'Copse', serif;
+}
+
+.form-control::-webkit-input-placeholder { 
+  color: white; 
+}
 
 
+#MERGE1{
+  width: 300px;
+  margin-right: 30px;
+}
+#MERGE0{
+  width: 300px;
+}
+#comment{
+  margin-top: 30px;
+  width: 600px;
+}
+button{
+  margin-top: 20px;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+}
 
 
 footer{
