--- a/style.css
+++ b/style.css
@@ -126,15 +126,16 @@ h6{
 
 .dsn-title{
   margin-left: 10px;
-
-}
-.dsn-image{
-  font-size: small;
-  text-align: justify;
+margin-right: -350px;
 }
 
 .dv-title{
-  margin-left: 60px;
+  margin-left: 90px;
+  margin-right: 20px;
+}
+
+.prdct-title{
+  margin-left: -20px;
 }
 
 .portfolio-h3{
